change source commit

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,3 +1,6 @@
+.navbar-inverse
+  background-color #4d4fd6
+
 body
   padding-top 61px
 
@@ -7,8 +10,15 @@ body
   h6
     color #ccc
 
+
+.form
+  
+.label
+  color #000000
+
 footer
   padding-left 15px
   padding-right 15px
+  padding-top 15px
   p
-    border-top 1px solid #d7e0e2
+    border-top 1px solid #4d4fd6
