--- a/server/views/partials/main.html
+++ b/server/views/partials/main.html
@@ -1,1 +1,1 @@
-<!--Created by Suneet on 2/9/2016.--><h1>This is a partial</h1><h2>{{myVar}}</h2>
+<div class="container"><h1>Xml Generator</h1><p>Get your rules written for you</p><form><h3>Rule Info</h3><div class="Rule"><div class="input"><span class="label">RuleName</span><input type="text" name="ruleName"/></div><div class="input"><span class="label">RuleID</span><input type="text" name="ruleID"/></div></div></form></div>
