--- a/server/views/partials/main.jade
+++ b/server/views/partials/main.jade
@@ -1,4 +1,12 @@
-//
-   Created by Suneet on 2/9/2016.
-h1 This is a partial
-h2 {{myVar}}
+.container
+   h1 Xml Generator
+   p Get your rules written for you
+   form
+      h3 Rule Info
+      div(class="Rule")
+         div.input
+            span.label RuleName
+            input(type="text", name="ruleName")
+         div.input
+            span.label RuleID
+            input(type="text", name="ruleID")
