--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,3 +1,6 @@
+.navbar-inverse {
+  background-color: #4d4fd6;
+}
 body {
   padding-top: 61px;
 }
@@ -8,10 +11,15 @@ body {
 .navbar-header a.navbar-brand h6 {
   color: #ccc;
 }
+.form,
+.label {
+  color: #000;
+}
 footer {
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 15px;
 }
 footer p {
-  border-top: 1px solid #d7e0e2;
+  border-top: 1px solid #4d4fd6;
 }
