--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -1,4 +1,5 @@
 script(type="text/javascript", src="/vendor/jquery/dist/jquery.js")
+script(type="text/javascript", src="/vendor/abdmob/x2js/xml2json.js")
 script(type="text/javascript", src="/vendor/angular/angular.js")
 script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
